# Cerberus-oss

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  test.py
.github/workflows/: ci.yml  npm-release.yml
crates/cerberus-cli/: Cargo.toml
crates/cerberus-cli/src/: main.rs  tui.rs
crates/cerberus-core/: Cargo.toml
crates/cerberus-core/src/: lib.rs
crates/cerberus-gateway/: Cargo.toml
crates/cerberus-gateway/src/: lib.rs  whatsapp.rs
crates/cerberus-llm/: Cargo.toml
crates/cerberus-llm/src/: config.rs  lib.rs
crates/cerberus-memory/: Cargo.toml
crates/cerberus-memory/src/: lib.rs
crates/cerberus-policy/: Cargo.toml
crates/cerberus-policy/src/: lib.rs
crates/cerberus-tools/: Cargo.toml
crates/cerberus-tools/src/: lib.rs
docs/: OPEN_CORE_STRATEGY.md  agent-adoption.md  agent-framework.md  architecture.md  distribution-security.md  product-strategy.md
examples/: mission.toml
npm/cerberus-cli/: install.js  package.json
scripts/: reportlab_report.py
scripts/whatsapp-bridge/: bridge.js  package-lock.json  package.json
