[package]
name = "cerberus-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cerberus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cerberus-core = { path = "../cerberus-core" }
cerberus-llm = { path = "../cerberus-llm" }
cerberus-memory = { path = "../cerberus-memory" }
cerberus-policy = { path = "../cerberus-policy" }
cerberus-gateway = { path = "../cerberus-gateway" }
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
dialoguer.workspace = true
