[package]
name = "cerberus-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
teloxide.workspace = true
cerberus-memory = { path = "../cerberus-memory" }
cerberus-core = { path = "../cerberus-core" }
cerberus-llm = { path = "../cerberus-llm" }
